# Equipment-Management

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  6.5.0  AI架构.md  AI组件重构提示词.md  App.xaml  App.xaml.cs  AsyncModbusClient.py  Backend.py  CHANGELOG.md  COMPLETION_REPORT.md  ConfigManager.py  DatabaseManager.py  DeviceModels.py  EquipmentManagement.csproj  EquipmentManagement.spec  GITHUB_UPLOAD.md  LICENSE  MCGS.md  MainWindow.xaml  MainWindow.xaml.cs  MainWindowViewModel.cs  Modbus 报文生成工具_RTU_ASCII_TCP.py  ModbusClient.py  Python UI 组件库完整方案.md  Python环境UI设计方案.md  QML_COMPONENT_COMPLETION_REPORT.md  QML_COMPONENT_GUIDE.md  QML_COMPONENT_INDEX.md  QML_COMPONENT_INTEGRATION.md  QML_MIGRATION_FINAL_SUMMARY.txt  QML_QUICK_START.md  QUICK_REFERENCE.md  README.md  RELEASE_NOTES_v1.1.0.md  TESTING.md  TEST_REPORT.md  TaskScheduler.py  (+70 more)
config/: devices.json  devices.json.bak  pump_station_a.json
core/: __init__.py  config_manager.py  config_models.py  constants.py  version.py
data/: equipment_management.db  equipment_management.db-shm  equipment_management.db-wal  ui_preferences.json
docs/: MainWindow集成MonitorPage修改方案.md  TESTING_GUIDE.md  TYPE_HINTS_GUIDE.md  __init__.py  architecture_audit_report.md  conf.py  generate_docs.py  index.rst  modbus_communication_audit.md  refactoring_plan_v5.md  功能架构与实现逻辑.md  功能逻辑检查报告.md  安装部署指南.md  性能优化建议.md  未来功能规划.md  用户文档.md
qml/: ComponentPreview.qml  MainView.qml  Theme.qml  ThemeManager.qml
scripts/: apply_monitor_page_patch.py  build.py  integrate_monitor_page.py  main_v2.py  migrate_database.py  monitor_changes.py  notify_updates.py
src/: __init__.py
tests/: __init__.py  conftest.py  memory_leak_detector.py  performance_tester.py  profile.py  run_tests.py  test_basic.py  test_byte_order_decoding.py  test_core_algorithms.py  test_device_connection_mcgs.py  test_device_poll_info.py  test_large_scale_performance.py  test_mcgs_reader.py  test_modbus_protocol.py  test_monitor_page_integration.py  test_production_refactoring_v31.py  test_realtime_chart.py  test_refactoring_quick_verify.py  test_serial_driver_tocou.py  test_settings_dialog.py  test_step2_1.py  test_step2_2.py  test_step2_3.py  test_step3_1.py  test_step4_1.py  test_step4_2.py  test_step4_3.py  test_step4_3_p1.py  test_ui_performance.py  test_version.py  test_widgets_integration.py
ui/: __init__.py  add_device_dialog.py  alarm_config_dialog.py  alarm_history_dialog.py  app_styles.py  (+19 more)
(+225 files in other folders)
