# ═══════════════════════════════════════════════════════════
# 工业设备管理系统 - 项目工程配置
# Python 3.10+ | PySide6 Widgets
# ═══════════════════════════════════════════════════════════

[project]
name = "equipment-management"
version = "1.5.5"
description = "工业设备管理系统 - Modbus设备监控与管理"
requires-python = ">=3.10"
license = {text = "MIT"}

dependencies = [
    "PySide6>=6.6.0",
    "PySide6-Addons>=6.6.0",
    "pyqtgraph>=0.13.0",
    "openpyxl>=3.1.0",
    "pyserial>=3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-qt>=4.2.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.5.0",
    "toml>=0.10.2",
]

# ═══════════════════════════════════════════════════════════
# Black 代码格式化
# ═══════════════════════════════════════════════════════════

[tool.black]
line-length = 100
target-version = ["py310"]
skip-string-normalization = false
include = '\.pyi?$'
exclude = '''
    /(
        \.eggs
        | \.git
        | \.hg
        | \.mypy_cache
        | \.tox
        | \.venv
        | _build
        | buck-out
        | build
        | dist
        | venv
        | __pycache__
    )/
'''

# ═══════════════════════════════════════════════════════════
# pytest 测试框架
# ═══════════════════════════════════════════════════════════

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--tb=short",
    "--strict-markers",
]
markers = [
    "unit: 单元测试",
    "integration: 集成测试",
    "slow: 耗时测试",
    "protocol: 协议层测试",
    "driver: 驱动层测试",
    "device: 设备层测试",
    "alarm: 报警测试",
]
qt_api = "pyside6"

[tool.coverage.run]
source = ["src"]
omit = [
    "tests/*",
    "**/__init__.py",
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

# ═══════════════════════════════════════════════════════════
# mypy 类型检查
# ═══════════════════════════════════════════════════════════

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["pyqtgraph.*", "serial.*"]
ignore_missing_imports = true
